<resources>
    <string name="app_name">하라햄찌</string>

    <!-- 오픈소리 라이센스 관련 텍스트 -->
    <string name="dots_indicator_license">
        Copyright 2016 Tommy Buonomo\n\n

        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n\n

        &#160; &#160; &#160; &#160; http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software\n
        distributed under the License is distributed on an "AS IS" BASIS,\n
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
        See the License for the specific language governing permissions and\n
        limitations under the License.
    </string>

    <string name="circle_progress_bar_license">
        Copyright 2015-2019 dinuscxj\n\n

        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n\n

        &#160; &#160; &#160; &#160; http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software\n
        distributed under the License is distributed on an "AS IS" BASIS,\n
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
        See the License for the specific language governing permissions and\n
        limitations under the License.
    </string>

    <string name="mp_android_chart_license">
        Copyright 2020 Philipp Jahoda\n\n

        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n\n

        &#160; &#160; &#160; &#160; http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software\n
        distributed under the License is distributed on an "AS IS" BASIS,\n
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
        See the License for the specific language governing permissions and\n
        limitations under the License.
    </string>

    <string name="ted_permission_license">
        Copyright 2021 Ted Park\n\n

        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n\n

        &#160; &#160; &#160; &#160; http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software\n
        distributed under the License is distributed on an "AS IS" BASIS,\n
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
        See the License for the specific language governing permissions and\n
        limitations under the License.
    </string>

    <string name="android_sliding_up_panel_license">
        Copyright 2015 Anton Lopyrev\n\n

        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this work except in compliance with the License.\n
        You may obtain a copy of the License in the LICENSE file, or at\n\n

        &#160; &#160; &#160; &#160; http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software\n
        distributed under the License is distributed on an "AS IS" BASIS,\n
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
        See the License for the specific language governing permissions and\n
        limitations under the License.
    </string>

    <string name="glide_license">
        Copyright 2012 Jake Wharton\n
        Copyright 2011 The Android Open Source Project\n\n

        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n\n

        &#160; &#160; &#160; &#160; http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software\n
        distributed under the License is distributed on an "AS IS" BASIS,\n
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
        See the License for the specific language governing permissions and\n
        limitations under the License.
    </string>

</resources>